--- a/configure.ac
+++ b/configure.ac
@@ -66,7 +66,13 @@ AC_ARG_WITH([host-scanner],
               [with_host_scanner=no])
 
 # libevent2
-AC_CHECK_LIB([libevent], [dlsym], [DL_LIBS=-levent])
+EVENT_LIB=""
+AC_ARG_WITH(libevent, [  --with-libevent=<dir>      Use libevent from here],
+		   [ libevent=$withval
+		     CPPFLAGS="$CPPFLAGS -I$withval/include"
+		     LDFLAGS="$LDFLAGS -L$withval/lib" ] )
+AC_CHECK_LIB([event], [event_new], [EVENT_LIBS=-levent])
+AC_SUBST([EVENT_LIBS])
 
 # Credential support on FreeBSD and DragonFly.
 AC_CHECK_HEADERS([sys/ucred.h])
