add wl_event_source_activate method and use pthreads in libevent2

--- a/configure.ac
+++ b/configure.ac
@@ -42,12 +42,11 @@ AC_SUBST(GCC_CFLAGS)
 AC_CHECK_FUNCS([accept4 mkostemp posix_fallocate])
 
 # libevent2
-EVENT_LIB=""
 AC_ARG_WITH(libevent, [  --with-libevent=<dir>      Use libevent from here],
 		   [ libevent=$withval
 		     CPPFLAGS="$CPPFLAGS -I$withval/include"
 		     LDFLAGS="$LDFLAGS -L$withval/lib" ] )
-AC_CHECK_LIB([event], [event_new], [EVENT_LIBS=-levent])
+AC_CHECK_LIB([event], [event_new], [EVENT_LIBS="-levent -levent_pthreads"])
 AC_SUBST([EVENT_LIBS])
 
 # Credential support on FreeBSD and DragonFly.
