Work around stuff to fix after rebase to libwayland master

--- a/configure.ac
+++ b/configure.ac
@@ -109,12 +109,12 @@ AC_SUBST([ICONDIR])
 
 if test "x$enable_libraries" = "xyes"; then
 	PKG_CHECK_MODULES(FFI, [libffi])
-	AC_CHECK_DECL(SFD_CLOEXEC,[],
-		      [AC_MSG_ERROR("SFD_CLOEXEC is needed to compile wayland libraries")],
-		      [[#include <sys/signalfd.h>]])
-	AC_CHECK_DECL(TFD_CLOEXEC,[],
-		      [AC_MSG_ERROR("TFD_CLOEXEC is needed to compile wayland libraries")],
-		      [[#include <sys/timerfd.h>]])
+#	AC_CHECK_DECL(SFD_CLOEXEC,[],
+#		      [AC_MSG_ERROR("SFD_CLOEXEC is needed to compile wayland libraries")],
+#		      [[#include <sys/signalfd.h>]])
+#	AC_CHECK_DECL(TFD_CLOEXEC,[],
+#		      [AC_MSG_ERROR("TFD_CLOEXEC is needed to compile wayland libraries")],
+#		      [[#include <sys/timerfd.h>]])
 	AC_CHECK_DECL(CLOCK_MONOTONIC,[],
 		      [AC_MSG_ERROR("CLOCK_MONOTONIC is needed to compile wayland libraries")],
 		      [[#include <time.h>]])
